Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -1,6 +1,6 @@
 # La structure generale d'une algorithme!
 
-```
+```python
 ALGORITHME  <nom_de_lalgorithme>
      <Déclaration des variables>
 DEBUT
@@ -8,15 +8,24 @@ DEBUT
 FIN
 ```
 
+```python
+#include<stdio.h>
+main(){
+     //<Déclaration des variables>
+     
+     //<Les étapes de l'algorithme>
+}
+```
+
 # Example
 #### Une algorithme pour afficher "Hello world 1337"
 
-```
+```python
 ALGORITHME  Hello world 1337
-     monVariable : Entier
+    VARIABLES monVariable : Entier
 DEBUT
-     monVariable <--- 1337
-     Ecrire("Hello world ", 1337)
+     monVariable <--- 2020
+     Ecrire("Hello world ", monVariable)
 FIN
 ```
 
