Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -2,18 +2,18 @@
 
 ```python
 ALGORITHME  <nom_de_lalgorithme>
-     <Déclaration des variables>
+     <déclaration des variables>
 DEBUT
-     <Les étapes de l'algorithme>
+     <les étapes de l'algorithme>
 FIN
 ```
 
 ```python
 #include<stdio.h>
 main(){
-     //<Déclaration des variables>
+     //<déclaration des variables>
      
-     //<Les étapes de l'algorithme>
+     //<les étapes de l'algorithme>
 }
 ```
 
