Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -8,7 +8,7 @@ DEBUT
 FIN
 ```
 
-```python
+```c
 #include<stdio.h>
 main(){
      //<déclaration des variables>
@@ -31,3 +31,87 @@ FIN
 
 [Video link](https://www.youtube.com/watch?v=IS0hvoPt85w&list=PLF2W_rB6QiYD4fIRAU1HPYRiVl8SF7xLc&index=2)
 
+```python
+ALGORITHME  <nom_de_lalgorithme>
+     VARIABLES a: ENTIER
+               b: REEL
+               c: CHARACTERE
+               d: BOOLEEN
+DEBUT
+     <les étapes de l'algorithme>
+FIN
+```
+
+```c
+#include<stdio.h>
+main(){
+     int a; // short a; ou long a;
+     float b; // double b;
+     char c;
+     int d; // 0 == faux, autre valeur == vrai
+     
+     
+     //<les étapes de l'algorithme>
+}
+```
+
+```python
+ALGORITHME  equation_affine
+     VARIABLES a, b: ENTIER
+               x: REEL
+DEBUT
+     ECRIRE("Bonjour! Merci de saisir la valeur de a non null: ")
+     LIRE(a)
+     ECRIRE("Super! Maintentant donner la valeur de b: )
+     LIRE(b)
+     x <-- -b/a
+     ECRIRE("La solution de l'equation ", a, "x+", b, "= 0 est x=", x)
+FIN
+```
+
+```c
+#include<stdio.h>
+main(){
+     int a, b; 
+     float x; 
+     
+     printf("Bonjour! Merci de saisir la valeur de a non null: ");
+     scanf("%d", &a);
+     printf("Super! Maintentant donner la valeur de b: ");
+     scanf("%d", &b);
+     x = -b/a;
+     printf("La solution de l'equation %d x+ %d = 0 est x=%f", a, b, x);
+}
+```
+
+# La structure de controle Si
+
+```python
+SI (<condition>) ALORS
+     <instructions>
+SINON
+
+SI (<condition>) ALORS
+     <instructions>
+SINON 
+     <instructions>
+FINSI
+
+SI (<condition>) ALORS
+     <instructions>
+SINON SI (<condition>) ALORS
+          <instructions>
+      SINON
+          <instructions>
+      FINSI
+FINSI
+```
+
+```c
+#include<stdio.h>
+main(){
+     //<déclaration des variables>
+     
+     //<les étapes de l'algorithme>
+}
+```
