Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -88,30 +88,113 @@ main(){
 
 ```python
 SI (<condition>) ALORS
-     <instructions>
-SINON
-
-SI (<condition>) ALORS
-     <instructions>
-SINON 
-     <instructions>
+     <instructions à executer si la condition et vraie>
 FINSI
 
 SI (<condition>) ALORS
-     <instructions>
-SINON SI (<condition>) ALORS
-          <instructions>
+     <instructions à executer si la condition et vraie>
+SINON 
+     <instructions à executer si la condition et fausse>
+FINSI
+
+SI (<condition1>) ALORS
+     <instructions à executer si la condition1 et vraie>
+SINON SI (<condition2>) ALORS
+          <instructions à executer si la condition1 est fausse et la condition2 est vraie>
       SINON
-          <instructions>
+          <instructions à executer si la condition1 et la condition2 sont fausses>
       FINSI
 FINSI
+
+SI (<condition1>) ALORS
+     <instructions à executer si la condition1 et vraie>
+SINON SI (<condition2>) ALORS
+          <instructions à executer si la condition1 est fausse et la condition2 est vraie>
+      SININ SI (<cond3>) ALORS
+               <instructions à executer si la condition1 et la condition2 sont fausses et cond3 est vraie>
+            ...
+            SINON SI (<condition_N>) ALORS
+                         <instructions à executer si la condition_N et vraie>
+                  SINON
+                         <instructions à executer si tous les conditions sont fausses.>
+                  FINSI
+            FINSI
+            ...
+      FINSI           
+FINSI
+```
+
+```c
+if (<condition>){
+     <instructions à executer si la condition et vraie>
+}
+
+if (<condition>){
+     <instructions à executer si la condition et vraie>
+}else{
+     <instructions à executer si la condition et fausse>
+}
+
+if (<condition1>){
+     <instructions à executer si la condition1 et vraie>
+}else if (<condition2>){
+     <instructions à executer si la condition1 est fausse et la condition2 est vraie>
+}else{
+     <instructions à executer si la condition1 et la condition2 sont fausses>
+}
+
+
+if (<condition1>){
+     <instructions à executer si la condition1 et vraie>
+}else if (<condition2>){
+     <instructions à executer si la condition1 est fausse et la condition2 est vraie>
+}else if (<cond3>){
+     <instructions à executer si la condition1 et la condition2 sont fausses et cond3 est vraie>
+}
+...
+}else if (<condition_N>){
+     <instructions à executer si la condition_N et vraie>
+}else{
+     <instructions à executer si tous les conditions sont fausses.>
+}
+```
+
+
+```python
+ALGORITHME  equation_affine
+     VARIABLES a, b: ENTIER
+               x: REEL
+DEBUT
+     ECRIRE("Bonjour! Merci de saisir la valeur de a: ")
+     LIRE(a)
+     ECRIRE("Super! Maintentant donner la valeur de b: )
+     LIRE(b)
+     
+     SI ( a <> 0) ALORS
+          x <-- -b/a
+          ECRIRE("La solution de l'equation ", a, "x+", b, "= 0 est x=", x)
+     SINON
+          ECRIRE("Erreur! Division par zero1 a=0")
+     FINSI
+FIN
 ```
 
 ```c
 #include<stdio.h>
 main(){
-     //<déclaration des variables>
+     int a, b; 
+     float x; 
      
-     //<les étapes de l'algorithme>
+     printf("Bonjour! Merci de saisir la valeur de a: ");
+     scanf("%d", &a);
+     printf("Super! Maintentant donner la valeur de b: ");
+     scanf("%d", &b);
+     
+     if( a != 0 ){
+          x = -b/a;
+          printf("La solution de l'equation %d x+ %d = 0 est x=%f", a, b, x);
+     }else{
+          printf("Erreur! Division par zero a=0");
+     }
 }
 ```
