Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -198,3 +198,16 @@ main(){
      }
 }
 ```
+# La structure de controle Pour
+```python
+POUR <variable/compteur> DE <v_depart> A <v_fin> FAIRE
+     <les instructions a repeter>
+FIN POUR
+```
+
+```c
+for(<initilisations (de compteur)>; <condition d'arret>; <mise a jours de compteur>){
+     //<les instructions a repeter>
+}
+
+```
