Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -206,8 +206,134 @@ FIN POUR
 ```
 
 ```c
-for(<initilisations (de compteur)>; <condition d'arret>; <mise a jours de compteur>){
+for(<initilisations (de compteur)>; <condition d_arret>; <mise a jours de compteur>){
      //<les instructions a repeter>
 }
 
+```
+# La structure de controle Tant que
+```python
+<initilisations nécessaires>
+TANT QUE (<condition d'arret>) FAIRE
+     <les instructions a repeter>
+     <mise a jours nécessaires>
+FIN TANT QUE
+```
+
+```c
+// <initilisations nécessaires>
+while (<condition d_arret>) {
+     // <les instructions a repeter>
+     // <mise a jours nécessaires>
+}
+```
+# La structure de controle Repeter jusqu'a
+```python
+<initilisations nécessaires>
+REPETER  
+     <les instructions a repeter>
+     <mise a jours nécessaires>
+JUSQU'A(<condition d'arret>)
+```
+
+```c
+// <initilisations nécessaires>
+do{
+     // <les instructions a repeter>
+     // <mise a jours nécessaires>
+}while (!(<condition d_arret>));
+```
+
+```python
+ALGORITHME    bonjour_10_fois
+DEBUT	
+     Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+	Ecrire(" Bonjour tout le monde")
+FIN 
+```
+```c
+#include<stdio.h>
+main(){
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+     printf(" Bonjour tout le monde");
+}
+```
+```python
+ALGORITHME    bonjour_10_fois
+     VARIABLE i: Entier
+DEBUT	
+     POUR i DE 1 A 10 FAIRE
+          Ecrire(" Bonjour tout le monde");
+     FIN POUR
+FIN 
+```
+```c
+#include<stdio.h>
+main(){
+     int i;
+     for(i = 1; i <= 10; i = i+1){
+           printf(" Bonjour tout le monde");
+     }
+}
+```
+```python
+ALGORITHME    bonjour_10_fois
+     VARIABLE i: Entier
+DEBUT
+     i <-- 1
+     TANT QUE (i <= 10) FAIRE
+          Ecrire(" Bonjour tout le monde");
+          i <-- i + 1
+     FIN TANT QUE
+FIN 
+```
+```c
+#include<stdio.h>
+main(){
+     int i;
+     i = 1;
+     while(i <= 10){
+           printf(" Bonjour tout le monde");
+           i = i+1;
+     }
+}
+```
+
+```python
+ALGORITHME    bonjour_10_fois
+     VARIABLE i: Entier
+DEBUT
+     i <-- 1
+     REPETER  
+          Ecrire(" Bonjour tout le monde");
+          i <-- i + 1
+     JUSQU'A (i > 10)
+FIN 
+```
+```c
+#include<stdio.h>
+main(){
+     int i;
+     i = 1;
+     do{
+           printf(" Bonjour tout le monde");
+           i = i+1;
+     }while(i <= 10);
+}
 ```
