Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -2,9 +2,9 @@
 
 ```python
 ALGORITHME  <nom_de_lalgorithme>
-     <déclaration des variables (les données)>
+     #<déclaration des variables (les données)>
 DEBUT
-     <les étapes de l'algorithme (les traitements)>
+     #<les étapes de l'algorithme (les traitements)>
 FIN
 ```
 
