Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -1,4 +1,5 @@
-# La structure generale d'une algorithme!
+#2
+###### La structure generale d'une algorithme!
 
 ```python
 ALGORITHME  <nom_de_lalgorithme>
@@ -16,9 +17,8 @@ main(){
      //<les étapes de l'algorithme>
 }
 ```
-
-# Example
-#### Une algorithme pour afficher "Hello world 1337"
+#2
+###### Une algorithme pour afficher "Hello world 1337"
 
 ```python
 ALGORITHME  Hello world 1337
@@ -31,6 +31,8 @@ FIN
 
 [Video link](https://www.youtube.com/watch?v=IS0hvoPt85w&list=PLF2W_rB6QiYD4fIRAU1HPYRiVl8SF7xLc&index=2)
 
+#3
+###### Les variables
 ```python
 ALGORITHME  <nom_de_lalgorithme>
      VARIABLES a: ENTIER
@@ -55,6 +57,8 @@ main(){
 }
 ```
 
+#4
+###### Ecrire et Lire
 ```python
 ALGORITHME  equation_affine
      VARIABLES a, b: ENTIER
@@ -83,8 +87,8 @@ main(){
      printf("La solution de l'equation %d x+ %d = 0 est x=%f", a, b, x);
 }
 ```
-
-# La structure de controle Si
+#5
+###### La structure de controle Si
 
 ```python
 SI (<condition>) ALORS
@@ -96,7 +100,21 @@ SI (<condition>) ALORS
 SINON 
      <instructions à executer si la condition et fausse>
 FINSI
+```
+```c
+if (<condition>){
+     <instructions à executer si la condition et vraie>
+}
 
+if (<condition>){
+     <instructions à executer si la condition et vraie>
+}else{
+     <instructions à executer si la condition et fausse>
+}
+```
+#6
+###### La structure de controle Si imbrique
+```python
 SI (<condition1>) ALORS
      <instructions à executer si la condition1 et vraie>
 SINON SI (<condition2>) ALORS
@@ -125,16 +143,6 @@ FINSI
 ```
 
 ```c
-if (<condition>){
-     <instructions à executer si la condition et vraie>
-}
-
-if (<condition>){
-     <instructions à executer si la condition et vraie>
-}else{
-     <instructions à executer si la condition et fausse>
-}
-
 if (<condition1>){
      <instructions à executer si la condition1 et vraie>
 }else if (<condition2>){
@@ -159,7 +167,8 @@ if (<condition1>){
 }
 ```
 
-
+#7
+###### La structure de controle Si (Exemple)
 ```python
 ALGORITHME  equation_affine
      VARIABLES a, b: ENTIER
@@ -198,7 +207,8 @@ main(){
      }
 }
 ```
-# La structure de controle Pour
+#8
+###### La structure de controle Pour
 ```python
 POUR <variable/compteur> DE <v_depart> A <v_fin> FAIRE
      <les instructions a repeter>
@@ -211,7 +221,8 @@ for(<initilisations (de compteur)>; <condition d_arret>; <mise a jours de compte
 }
 
 ```
-# La structure de controle Tant que
+#9
+###### La structure de controle Tant que
 ```python
 <initilisations nécessaires>
 TANT QUE (<condition d'arret>) FAIRE
@@ -227,7 +238,8 @@ while (<condition d_arret>) {
      // <mise a jours nécessaires>
 }
 ```
-# La structure de controle Repeter jusqu'a
+#10
+###### La structure de controle Repeter jusqu'a
 ```python
 <initilisations nécessaires>
 REPETER  
