Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -1,5 +1,13 @@
-[algorithme 1]()
-# 2
+[algorithme 1](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#2)
+[Les variables](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#3)
+[Lire et Ecrire](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#4)
+[Si](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#5)
+[Si Imbrique](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#6)
+[Exemple Si](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#7)
+[Pour](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#8)
+[TantQue](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#9)
+[Repeter jusqu'a](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#10)
+# 1
 ###### La structure generale d'une algorithme!
 
 ```python
@@ -18,7 +26,7 @@ main(){
      //<les étapes de l'algorithme>
 }
 ```
-#2
+# 2 
 ###### Une algorithme pour afficher "Hello world 1337"
 
 ```python
@@ -32,7 +40,7 @@ FIN
 
 [Video link](https://www.youtube.com/watch?v=IS0hvoPt85w&list=PLF2W_rB6QiYD4fIRAU1HPYRiVl8SF7xLc&index=2)
 
-#3
+# 3
 ###### Les variables
 ```python
 ALGORITHME  <nom_de_lalgorithme>
@@ -57,8 +65,8 @@ main(){
      //<les étapes de l'algorithme>
 }
 ```
-
-#4
+[top ^](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#1)
+# 4
 ###### Ecrire et Lire
 ```python
 ALGORITHME  equation_affine
@@ -88,7 +96,8 @@ main(){
      printf("La solution de l'equation %d x+ %d = 0 est x=%f", a, b, x);
 }
 ```
-#5
+[top ^](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#1)
+# 5
 ###### La structure de controle Si
 
 ```python
@@ -113,7 +122,8 @@ if (<condition>){
      <instructions à executer si la condition et fausse>
 }
 ```
-#6
+[top ^](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#1)
+# 6
 ###### La structure de controle Si imbrique
 ```python
 SI (<condition1>) ALORS
@@ -167,8 +177,8 @@ if (<condition1>){
      <instructions à executer si tous les conditions sont fausses.>
 }
 ```
-
-#7
+[top ^](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#1)
+# 7
 ###### La structure de controle Si (Exemple)
 ```python
 ALGORITHME  equation_affine
@@ -208,7 +218,8 @@ main(){
      }
 }
 ```
-#8
+[top ^](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#1)
+# 8
 ###### La structure de controle Pour
 ```python
 POUR <variable/compteur> DE <v_depart> A <v_fin> FAIRE
@@ -222,7 +233,8 @@ for(<initilisations (de compteur)>; <condition d_arret>; <mise a jours de compte
 }
 
 ```
-#9
+[top ^](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#1)
+# 9
 ###### La structure de controle Tant que
 ```python
 <initilisations nécessaires>
@@ -239,7 +251,8 @@ while (<condition d_arret>) {
      // <mise a jours nécessaires>
 }
 ```
-#10
+[top ^](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#1)
+# 10
 ###### La structure de controle Repeter jusqu'a
 ```python
 <initilisations nécessaires>
