Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -363,3 +363,31 @@ main(){
      }while(i <= 10);
 }
 ```
+
+```python
+ALGORITHME  somme
+     VARIABLES a, b, somme: ENTIER
+DEBUT
+     ECRIRE("Bonjour! Merci de saisir la valeur de a: ")
+     LIRE(a)
+     ECRIRE("Super! Maintentant donner la valeur de b: )
+     LIRE(b)
+     somme <-- a + b
+     ECRIRE("La somme de nombre ", a, " et ", b," est égale à ", somme, ".") 
+FIN
+```
+
+```c
+#include<stdio.h>
+main(){
+     int a, b; 
+     float x; 
+     
+     printf("Bonjour! Merci de saisir la valeur de a non null: ");
+     scanf("%d", &a);
+     printf("Super! Maintentant donner la valeur de b: ");
+     scanf("%d", &b);
+     x = -b/a;
+     printf("La solution de l'equation %d x+ %d = 0 est x=%f", a, b, x);
+}
+```
