Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -7,6 +7,7 @@
 [Pour](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#8)
 [TantQue](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#9)
 [Repeter jusqu'a](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#10)
+[end v](https://github.com/Zeek-Zone/MIP-LST-MST/blob/master/Algorithmique/101/0.%20Hello%20world.md#end)
 # 1
 ###### La structure generale d'une algorithme!
 
@@ -391,3 +392,25 @@ main(){
      printf("La solution de l'equation %d x+ %d = 0 est x=%f", a, b, x);
 }
 ```
+
+```python
+ALGORITHME  nombre_de_jours_dun_mois
+     mois: Entier
+DEBUT
+     ecrire("Bonjour! Merci de saisir la valeur de mois: ")
+     lire(mois)
+     Selon mois Faire
+            Cas  2:
+		ecrire("28 ou 29 jours")
+            Cas  1, 3, 5, 7, 8, 10 , 12 :
+		ecrire("31 jours")
+            Cas  4, 6, 9, 11 :
+		ecrire("30 jours")
+            Sinon
+                ecrire("Attention : Mois Incorrect")
+     Fin Selon
+FIN
+
+```
+
+# end
