Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -223,7 +223,7 @@ main(){
 # 8
 ###### La structure de controle Pour
 ```python
-POUR <variable/compteur> DE <v_depart> A <v_fin> FAIRE
+POUR <variable/compteur> DE <v_depart> A <v_fin> [pas=<nombre>] FAIRE
      <les instructions a repeter>
 FIN POUR
 ```
@@ -274,7 +274,7 @@ do{
 ```python
 ALGORITHME    bonjour_10_fois
 DEBUT	
-     Ecrire(" Bonjour tout le monde")
+        Ecrire(" Bonjour tout le monde")
 	Ecrire(" Bonjour tout le monde")
 	Ecrire(" Bonjour tout le monde")
 	Ecrire(" Bonjour tout le monde")
@@ -411,6 +411,32 @@ DEBUT
      Fin Selon
 FIN
 
+```
+
+```python
+ALGORITHME   dix_fois
+DEBUT	
+        Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+	Ecrire("Je vais valider avec mention!")
+FIN 
+```
+
+```python
+ALGORITHME    dix_fois_avec_pour
+     VARIABLE i: Entier  % un compteur %
+DEBUT	
+     POUR i DE 1 A 10 FAIRE
+          Ecrire("Je vais valider avec mention!");
+     FIN POUR
+FIN 
 ```
 
 # end
