Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -438,5 +438,26 @@ DEBUT
      FIN POUR
 FIN 
 ```
-
+```python
+ALGORITHME    dix_fois_avec_TantQue
+     VARIABLE i: Entier
+DEBUT
+     i <-- 1
+     TANT QUE (i <= 10) FAIRE
+          Ecrire("Je vais valider avec mention!");
+          i <-- i + 1
+     FIN TANT QUE
+FIN 
+```
+```python
+ALGORITHME    dix_fois_avec_RepeterJusqua
+     VARIABLE i: Entier
+DEBUT
+     i <-- 1
+     REPETER  
+          Ecrire("Je vais valider avec mention!");
+          i <-- i + 1
+     JUSQU'A (i > 10)
+FIN 
+```
 # end
