Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -371,11 +371,24 @@ ALGORITHME  somme
 DEBUT
      ECRIRE("Bonjour! Merci de saisir la valeur de a: ")
      LIRE(a)
-     ECRIRE("Super! Maintentant donner la valeur de b: )
+     ECRIRE("Super! Maintentant donner la valeur de b: ")
      LIRE(b)
      somme <-- a + b
      ECRIRE("La somme de nombre ", a, " et ", b," est égale à ", somme, ".") 
 FIN
+```
+```c
+#include<stdio.h>
+main(){
+     int a, b, somme; 
+     
+     printf("Bonjour! Merci de saisir la valeur de a: ");
+     scanf("%d", &a);
+     printf("Super! Maintentant donner la valeur de b: ");
+     scanf("%d", &b);
+     somme = a + b;
+     printf("La somme de nombre %d et %d est égale à %d.", a, b, somme);
+}
 ```
 
 ```c
