--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -426,6 +426,29 @@ FIN
 
 ```
 
+```c
+#include<stdio.h>
+main(){
+     int mois;
+     printf("Bonjour! Merci de saisir la valeur de mois: ");
+     scanf("%d", mois);
+     switch(mois){
+            case  2:
+		printf("28 ou 29 jours");
+		break;
+	    case  1 : case  3 : case  5 : case  7 : 
+	    case  8 : case  10: case  12:
+		printf("31 jours");
+		break;
+            case  4 : case  6 : case  9 : case 11 :
+		printf("30 jours");
+		break;
+            default:
+                printf("Attention : Mois Incorrect");
+     }
+}
+```
+
 ```python
 ALGORITHME   dix_fois
 DEBUT	
