Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -76,7 +76,7 @@ ALGORITHME  equation_affine
 DEBUT
      ECRIRE("Bonjour! Merci de saisir la valeur de a non null: ")
      LIRE(a)
-     ECRIRE("Super! Maintentant donner la valeur de b: )
+     ECRIRE("Super! Maintentant donner la valeur de b: ")
      LIRE(b)
      x <-- -b/a
      ECRIRE("La solution de l'equation ", a, "x+", b, "= 0 est x=", x)
