Update 0. Hello world.md

--- a/Algorithmique/101/0. Hello world.md
+++ b/Algorithmique/101/0. Hello world.md
@@ -315,7 +315,7 @@ FIN
 main(){
      int i;
      for(i = 1; i <= 10; i = i+1){
-           printf(" Bonjour tout le monde");
+           printf("Je vais valider avec mention!");
      }
 }
 ```
@@ -325,7 +325,7 @@ ALGORITHME    bonjour_10_fois
 DEBUT
      i <-- 1
      TANT QUE (i <= 10) FAIRE
-          Ecrire(" Bonjour tout le monde");
+          Ecrire("Je vais valider avec mention!");
           i <-- i + 1
      FIN TANT QUE
 FIN 
@@ -359,7 +359,7 @@ main(){
      int i;
      i = 1;
      do{
-           printf(" Bonjour tout le monde");
+           printf("Je vais valider avec mention!");
            i = i+1;
      }while(i <= 10);
 }
