--- a/Langage C/S1/Examens 2019-2020.md
+++ b/Langage C/S1/Examens 2019-2020.md
@@ -111,9 +111,10 @@ main(){
 }
 
 ```
-![image](qstCour.png)
+![image](qstCours.png)
 
 ```c
+// Exercice 1
 #include<stdio.h>
 main(){
 	int n, a, b, c;
@@ -143,10 +144,11 @@ main(){
 ```
 
 ```c
+//Exercice 2
 #include <stdio.h>
 
 main (){
-	int somPositif = 0, somNegatif = 0;
+    int somPositif = 0, somNegatif = 0;
     int n;
     
     do{
@@ -169,6 +171,7 @@ main (){
 ```
 
 ```c
+// Exercice 3
 #include <stdio.h>
 
 main (){
@@ -208,3 +211,5 @@ main (){
 
 
 ```
+![image](exo3.png)
+
