--- a/Examens/FSTM/S2/exam2016.md
+++ b/Examens/FSTM/S2/exam2016.md
@@ -65,7 +65,7 @@ Debut
         FinSi
         
     Jusqua(valeur < 0)
-    Ecrire("La somme des ", i+1, "valeurs saisie est ", somme)
+    Ecrire("La somme des ", i, "valeurs saisie est ", somme)
 Fin
 */
 
@@ -112,15 +112,155 @@ Debut
         Si (tab[i] >= 0)
             somme <-- somme + tab[i]
             Si ((tab[i] Mod 2 = 0) OU (tab[i] Mod 5 = 0)) Alors
-				sommeM2ou5 <-- sommeM2ou5  + tab[i]
-			FinSi
+		sommeM2ou5 <-- sommeM2ou5  + tab[i]
+	    FinSi
             i <-- i + 1
         FinSi
         
     Jusqua(valeur < 0)
-    Ecrire("La somme des ", i+1, "valeurs saisie est ", somme)
+    Ecrire("La somme des ", i, "valeurs saisie est ", somme)
     Ecrire("La somme des multiples de 2 ou 5 est ", sommeM2ou5)
 Fin
 */
 
+
+```
+```c
+/* Examen 2016 Exercice 2 Question 4
+#include <stdio.h>
+
+main(){
+    int tab[100]; /// type nom;
+    int i, valeur, somme, sommeM2ou5;
+
+    somme = 0;
+    i = 0;
+    sommeM2ou5 = 0;
+
+    do{
+        printf("Donner une valeur : ");
+        scanf("%d", &tab[i]);
+        valeur = tab[i];
+
+        if (tab[i] >= 0){
+            somme = somme + tab[i];
+
+            if ((tab[i] % 2 == 0) || (tab[i] % 5 == 0))
+                sommeM2ou5 = sommeM2ou5 + tab[i];
+
+            i = i + 1;
+        }
+
+     }while(valeur >= 0);
+    printf("La somme des %i valeurs saisie est %d\n", i, somme);
+    printf("La somme des multiples de 2 ou 5 est %d", sommeM2ou5, -1);
+}
+```
+
+#### Exercice 3
+##### Question 1
+```c
+#include<stdio.h>
+main(){
+    int n, count;
+    const int c = 1000;
+    
+    
+    count = 0;
+    do{
+        printf("donner une valeur ");
+        scanf("%d",&n);
+        
+        if(c < n)
+        	printf("Plus grande !\n");
+        else if(c > n)
+        	printf("Plus petite !\n");
+        else 
+        	printf("fin Programme! Felicitations. \n");
+        
+        count++;
+    }while(n != c && count < 10);
+    
+    if(n == c)
+    	printf("Vous avez trouve la bonne reponse apres %d eassies", count);
+    else
+    	printf("Ooops! Vous avez nombre d'essaies permise (10)");
+}
+```
+##### Question 2
+```c
+#include<stdio.h>
+main(){
+    int n, count, tab[10],  i;
+    const int c = 1000;
+    
+    count = 0;
+    i = 0;
+    do{
+        printf("donner une valeur ");
+        scanf("%d",&tab[i]);
+        
+        if(c < tab[i])
+        	printf("Plus grande !\n");
+        else if(c > tab[i])
+        	printf("Plus petite !\n");
+        else 
+        	printf("fin Programme! Felicitations. \n");
+        	
+        n = tab[i];
+        i++;
+        count++;
+    }while(n != c && count < 10);
+    
+    if(n == c)
+    	printf("Vous avez trouve la bonne reponse apres %d eassies\n", count);
+    else
+    	printf("Ooops! Vous avez nombre d'essaies permise (10)\n");
+    
+    printf("Voici les valeurs saisies: \n");
+    for(i=0; i<count; i++)
+    	printf("%d  ", tab[i]);
+}
+```
+##### Question 3
+```c
+#include<stdio.h>
+main(){
+    int n, count, tab[10],  i;
+    const int c = 1000;
+    int repeter = 0; // faux
+    
+    do{
+    	count = 0;
+	    i = 0;
+	    do{
+	        printf("donner une valeur ");
+	        scanf("%d",&tab[i]);
+	        
+	        if(c < tab[i])
+	        	printf("Plus grande !\n");
+	        else if(c > tab[i])
+	        	printf("Plus petite !\n");
+	        else 
+	        	printf("fin Programme! Felicitations. \n");
+	        	
+	        n = tab[i];
+	        i++;
+	        count++;
+	    }while(n != c && count < 10);
+	    
+	    if(n == c)
+	    	printf("Vous avez trouve la bonne reponse apres %d eassies\n", count);
+	    else
+	    	printf("Ooops! Vous avez nombre d'essaies permise (10)\n");
+	    
+	    printf("Voici les valeurs saisies: \n");
+	    for(i=0; i<count; i++)
+	    	printf("%d  ", tab[i]);
+	    	
+    	printf("\n ***************************** \n");
+    	printf("Est ce que tu veux reprendre le jeu? (taper 1 si OUI, taper 0 si NON)\n");
+    	scanf("%d", &repeter);
+	}while(repeter == 1);
+}
 ```
