--- a/Examens/FSTM/S2/exam2016.md
+++ b/Examens/FSTM/S2/exam2016.md
@@ -130,7 +130,7 @@ Fin
 #include <stdio.h>
 
 main(){
-    int tab[100]; /// type nom;
+    int tab[100]; 
     int i, valeur, somme, sommeM2ou5;
 
     somme = 0;
@@ -152,8 +152,8 @@ main(){
         }
 
      }while(valeur >= 0);
-    printf("La somme des %i valeurs saisie est %d\n", i, somme);
-    printf("La somme des multiples de 2 ou 5 est %d", sommeM2ou5, -1);
+    printf("La somme des %d valeurs saisie est %d\n", i, somme);
+    printf("La somme des multiples de 2 ou 5 est %d", sommeM2ou5);
 }
 ```
 
